feat : static인 index.html과 templates인 home.html 구분 및 HomeController 추가로 templates가 우선권을 가지고 home.html이 먼저 동작

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
-    <h1>Home Page</h1>
-    <div>
-        <button>글 작성</button>
-    </div>
-    <br>
-    <div>
-        <table>
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>제목</th>
-                    <th>작성자</th>
-                    <th>게시 날짜</th>
-                    <th>보기</th>
-                </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
-    </div>
-
+    <h1>Welcome Page - resources/static/index.html</h1>
 </body>
 </html>
